# sudokuki-code

./: AUTHORS  HOWTO_RUN_SUDOKUKI.txt  LATEST  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  checklist.sh  configure  configure.ac  libtool  make_jar_zip_release.sh  sudokuki.sh
RELEASE/javaautotoolsexample/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
RELEASE/javaautotoolsexample/src/: Makefile.am  Makefile.in
RELEASE/javaautotoolsexample/src/classes/: DIST_NOINST_JAVA.include  Makefile.am  Makefile.in
RELEASE/javaautotoolsexample/src/classes/net/jankenpoi/autotoolsexample/: HelloWithJNI.c  HelloWithJNI.java  Main.java  Version.java
RELEASE/javaautotoolsexample/src/classes/net/jankenpoi/i18n/: I18n.java
RELEASE/sudokuki/: AUTHORS  LATEST  Makefile  Makefile.am  README  autogen.sh  checklist.sh  config.status  configure  configure.ac  libtool  make_jar_zip_release.sh  options  sudokuki.sh  test.sh
RELEASE/sudokuki/po/: de.po  (+18 more)
debian/: changelog  control  copyright  files  release_Debian_package_HOWTO
m4/: Makefile.in
po/: LINGUAS  LINGUAS_properties  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.po  de.gmo  de.po  el.gmo  el.po  en.po  eo.gmo  eo.po  es.gmo  es.po  fr.po  hu.po  ja.po  lv.po  nl.po  pl.po  pt.gmo  pt.po  pt_BR.po  ru.po  sudokuki.pot  sudokuki_ar.properties  sudokuki_de.properties  sudokuki_el.properties  sudokuki_en.properties  sudokuki_eo.properties  sudokuki_es.properties  sudokuki_fr.properties  sudokuki_hu.properties  sudokuki_ja.properties  sudokuki_lv.properties  sudokuki_nl.properties  sudokuki_pl.properties  sudokuki_pt.properties  (+8 more)
src/: MANIFEST.MF_test  Makefile  Makefile.am  Makefile.in  sudokuki
src/classes/: DIST_NOINST_JAVA.include  Makefile  Makefile.am  Makefile.in
src/classes/net/jankenpoi/i18n/: I18n.java
src/classes/net/jankenpoi/sudokuki/: SudokuGrid.java  Version.java
src/classes/net/jankenpoi/sudokuki/controller/: GridController.java
src/classes/net/jankenpoi/sudokuki/generator/: SudokuGenerator.java  SudokuGeneratorFactory.java
src/classes/net/jankenpoi/sudokuki/generator/suexg/: SuexgGenerator.java  SuexgJava.java  SuexgProxy.java  net_jankenpoi_sudokuki_suexg_SuexgProxy.h  suexg_proxy.c
src/classes/net/jankenpoi/sudokuki/model/: GridChangedEvent.java  GridModel.java  Position.java
src/classes/net/jankenpoi/sudokuki/preferences/: UserPreferences.java
src/classes/net/jankenpoi/sudokuki/resources/: UIResources.java
src/classes/net/jankenpoi/sudokuki/solver/: BruteForceGridSolver.java  DLXGridSolver.java  SOLVER.txt  SOLVER_FRENCH.txt
src/classes/net/jankenpoi/sudokuki/ui/: Main.java  MemosSelector.java  Selector.java  TestApp.java  UIApp.java
src/classes/net/jankenpoi/sudokuki/ui/swing/: AboutAction.java  AboutDialog.java  CheatMenu.java  CheckUpdateAction.java  CheckUpdateDialog.java  ClearAllMovesAction.java  CustomGridAction.java  DualSelectionDialog.java  DualSwingSelector.java  EditMenu.java  EraseAllMemosAction.java  FileMenu.java  GridGenerationDialog.java  HelpMenu.java  Images.java  LanguageDialog.java  LanguageMenu.java  LevelMenu.java  LocaleListenerImpl.java  MenuBar.java  NewGridAction.java  NewVersionFoundDialog.java  NumbersMenu.java  OpenGridAction.java  OpenUpdateSiteAction.java  PlayCustomGridAction.java  PrintAction.java  PrintMultiAction.java  PrintMultiDialog.java  QuitAction.java  ResolveAction.java  ResolveGridDialog.java  SaveAsAction.java  SelectMemosPanel.java  SelectNumberPanel.java  SetAllMemosAction.java  SetMemosHereAction.java  StockIcons.java  SwingApp.java  SwingGrid.java  (+4 more)
src/classes/net/jankenpoi/sudokuki/ui/text/: TextView.java
src/classes/net/jankenpoi/sudokuki/view/: GridListener.java  GridView.java
src/classes/net/sourceforge/plantuml/sudoku/: DLXEngine.java  SuexgGenerator2.java
src/resources/: EXTRA_DIST.include  Makefile  Makefile.am  Makefile.in
src/resources/files/net/jankenpoi/i18n/: sudokuki_ar.properties  sudokuki_de.properties  sudokuki_el.properties  sudokuki_en.properties  sudokuki_eo.properties  sudokuki_es.properties  sudokuki_fr.properties  sudokuki_hu.properties  sudokuki_ja.properties  sudokuki_lv.properties  sudokuki_nl.properties  sudokuki_pl.properties  sudokuki_pt.properties  sudokuki_pt_BR.properties  sudokuki_ru.properties  sudokuki_ta.properties  sudokuki_zh.properties
src/suexg/: Makefile  gene_suexg_v12.c
(+95 files in other folders)
